# jira-contributor-summary

./: .gitignore  LICENSE  README.md  example.py  prompt.txt  pyproject.toml  requirements.txt
src/jira_contributor_summary/: __init__.py  cache.py  cli.py  contributors.py  hierarchy.py  html_generator.py  jira_client.py
tests/: __init__.py  test_cache.py  test_contributors.py
